2011-01-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window-class.h: Removed file.

	* src/nact/base-window.h:
	* src/nact/Makefile.am: Updated accordingly.

	* src/utils/na-gconf2key.sh.in:
	Get ride of possible error messages when forcing gconfd-2 synchro.

	* src/nact/base-application.c:
	* src/nact/base-application.h (base_application_message_dlg,
	base_application_error_dlg, base_application_yesno_dlg):
	Functions are moved to BaseWindow class.

	* src/nact/base-window.c:
	* src/nact/base-window.h
	(base_window_display_yesno_dlg, base_window_display_message_dlg):
	New functions.

	* src/nact/base-application.c:
	* src/nact/base-application.h
	(base_application_get_ui_filename): Removed function.
	(get_ui_filename): Removed virtual method.

	* src/nact/nact-application.c
	(appli_get_gtkbuilder_filename):Removed function.

	* src/nact/base-window.c (base_window_init): Rewrite BaseWindow initialization.

	* src/nact/nact-main-window.c (nact_main_window_new):
	Initialize the main window with XML UI properties.

	* src/nact/base-window.c:
	* src/nact/base-window.h: Rename initialization properties.

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-preferences-editor.c: Updated accordingly.

	* src/nact/base-application.c:
	* src/nact/base-application.h:
	Define new 'base-application-description' property.
	Remove unused properties.

	* src/nact/nact-application.c (nact_application_new):
	Make use of the new property at instanciation time.

2011-01-20 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_display_error_dlg): New function.

	* src/nact/base-application.c:
	* src/nact/base-application.h (base_application_get_icon_name):
	Removed function.
